# ebi

./: Cargo.toml
.github/workflows/: ci.yml
daemon/: Cargo.toml
daemon/src/: main.rs  sharedref.rs  tag.rs
daemon/src/config/: mod.rs
daemon/src/query/: mod.rs
daemon/src/rpc/: service.rs
daemon/src/services/: cache.rs  fs.rs  mod.rs  network.rs  query.rs  rpc.rs  state.rs
daemon/src/shelf/: dir.rs  file.rs  mod.rs
database/: Cargo.toml
database/src/: cache.rs  lib.rs  redb.rs  state.rs
database/src/service/: mod.rs  scoped.rs  state.rs
ebi/daemon/: Cargo.toml
ebi/daemon/src/: main.rs  sharedref.rs  stateful.rs  tag.rs  workspace.rs
ebi/daemon/src/query/: file_order.rs  mod.rs
ebi/daemon/src/services/: cache.rs  filesys.rs  mod.rs  peer.rs  query.rs  rpc.rs  state.rs  workspace.rs
ebi/daemon/src/shelf/: dir.rs  file.rs  mod.rs  node.rs  shelf.rs
ebi/proto/: Cargo.toml
ebi/proto/src/: ebi.proto  rpc.rs
filesystem/: Cargo.toml
filesystem/src/: config.rs  dir.rs  file.rs  lib.rs  redb.rs  service.rs  shelf.rs  watcher.rs
network/: Cargo.toml
network/src/: service.rs
proto/: Cargo.toml
proto/src/: ebi.proto  rpc.rs
query/: Cargo.toml  LICENSE
query/src/: lib.rs  service.rs
state/: Cargo.toml
state/src/: cache.rs  lib.rs  redb.rs
state/src/service/: mod.rs  state.rs  workspace.rs
types/: Cargo.toml
types/src/: file.rs  id.rs  lib.rs  redb.rs  sharedref.rs  shelf.rs  stateful.rs  tag.rs  workspace.rs
