[workspace]
resolver = "3"
members = [ "daemon", "query", "filesystem", "macro", "proto" , "types", "network", "database"]
[workspace.dependencies]
ebi-proto = { path = "proto" }
ebi-filesystem = { path = "filesystem" }
ebi-query = { path = "query" }
ebi-network = { path = "network" }
ebi-database = { path = "database" }
ebi-types = { path = "types" }

rayon = "1.10.0" # 1 disabled feature flag
jwalk = "0.8.1" # no features flags
fxhash = "0.2.1"
chrono = { version = "0.4.40", default-features = false, features = ["clock", "std", "serde"] }
tokio = { version = "1.44.1", features = ["sync", "time", "macros"] }
tower = "0.5.2"
peg = "0.8.5"
iroh = { version  = "0.91.1", default-features = false }
iroh-base = { version = "0.91.1", default-features = false, features = ["key"] }
anyhow = "1.0.97"
rand = "0.8.5"
paste = "1.0.15"
uuid = { version = "1.17.0", features = ["v7", "v4", "v5", "serde"] }
regex = "1.11.1"
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
scalable_cuckoo_filter = { version = "0.4.0", features = ["serde", "serde_support", "serde_bytes"] }
rand_chacha = "0.9.0"
tracing = { version = "0.1.41", features = ["std", "default"] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["std", "ansi", "env-filter"] }
arc-swap = { version = "1.7.1", features = ["weak", "serde"] }
papaya = { git = "https://github.com/yamabiiko/papaya" }
im = { version = "15.1.0", features = ["serde"] }
file-id = { version = "0.2.3", features = ["serde"] }
