[package]
name = "ebi"
version = "0.1.0"
edition = "2024"

[dependencies]
ebi-filesystem = { workspace = true }
ebi-proto = { workspace = true }
ebi-types = { workspace = true }
ebi-network = { workspace = true }
ebi-database = { workspace = true }
ebi-query = { workspace = true }

tokio = { workspace = true }
tower = { workspace = true }
iroh = { workspace = true }
iroh-base = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
paste = { workspace = true }
regex = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
arc-swap = { workspace = true }
papaya = { workspace = true }
