[package]
name = "ebi-filesystem"
version = "0.1.0"
edition = "2024"

[dependencies]
seize = "0.5.0"

ebi-types = { workspace = true }
ebi-proto = { workspace = true }

bincode = { workspace = true }
tower = { workspace = true }
jwalk = { workspace = true }
uuid = { workspace = true }
scalable_cuckoo_filter = { workspace = true }
papaya = { workspace = true }
rand_chacha = { workspace = true }
iroh = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
arc-swap = { workspace = true }
im = { workspace = true }
serde = { workspace = true }
redb = { workspace = true }
rayon = { workspace = true }
