[package]
name = "ebi-proto"
version = "0.1.0"
edition = "2024"

[dependencies]
enum_dispatch = { workspace = true }
paste = { workspace = true }
uuid = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
bytes = { workspace = true }

[build-dependencies]
prost-build = { version = "0.13" }
