[package]
name = "ebi-state"
version = "0.1.0"
edition = "2024"

[dependencies]
ebi-filesystem = { workspace = true }
ebi-proto = { workspace = true }
ebi-types = { workspace = true }

arc-swap = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
im = { workspace = true }

serde = { workspace = true }
redb = { workspace = true }
