[package]
name = "ebi"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1.10.0" # 1 disabled feature flag
jwalk = "0.8.1" # no features flags
fxhash = "0.2.1"
chrono = { version = "0.4.40", default-features = false, features = ["clock", "std", "serde"] }
tokio = "1.44.1"
tower = "0.5.2"
peg = "0.8.5"
iroh = { version  = "0.91.1", default-features = false }
iroh-base = { version = "0.91.1", default-features = false }
anyhow = "1.0.97"
rand = "0.8.5"
paste = "1.0.15"
uuid = { version = "1.17.0", features = ["v7", "v4", "v5", "serde"] }
regex = "1.11.1"
ebi-proto = { path = "../proto" }
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
scalable_cuckoo_filter = { version = "0.4.0", features = ["serde", "serde_support", "serde_bytes"] }
rand_chacha = "0.9.0"
tracing = { version = "0.1.41", features = ["std", "default"] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["std", "ansi", "env-filter"] }
arc-swap = { version = "1.7.1", features = ["weak", "serde"] }
papaya = { version = "0.2.3", features = ["serde"] }
im = { version = "15.1.0", features = ["serde"] }
